--- a/index.html
+++ b/index.html
@@ -156,10 +156,15 @@
   </div>
 </nav>
 
+<!-- Overlay effect when opening sidebar on small screens -->
+<div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:300px">
 
   <header id="about">
+    <img src="image/DSC_4096.jpg" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity">
+    <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <div class="w3-container" style="margin-bottom:10px; margin-top: 10px;">
         <h4><b>About Me</b></h4>
         <p>Tôi tên là Nguyễn Quang Huy. Tôi sinh ra và lớn lên ở tỉnh Kon Tum, quê quán ở tỉnh Nghệ An, học THPT ở tỉnh Thừa Thiên Huế và hiện đang sinh sống và học tập tại Thành phố Hồ Chí Minh. Tôi có đam mê với Toán học, lập trình, bóng đá, cờ vua và rubik. Hiện tại tôi đang theo học chương trình Cử nhân tài năng ngành Khoa học máy tính của Đại học Bách Khoa - ĐHQG HCM.</p>
@@ -192,8 +197,6 @@
   
 
   <header id="portfolio">
-    <img src="image/DSC_4096.jpg" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity">
-    <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <div class="w3-container">
       <h1><b>Study process</b></h1>
       <div class="w3-section w3-bottombar w3-padding-16">
