--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dropdown Menu with Dynamic Content</title>
+  <title>Nguyen Quang Huy Portfolio</title>
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -257,7 +257,7 @@
     <div class="w3-row-padding w3-center w3-padding-24" style="margin:0 -16px">
       <div class="w3-third w3-dark-grey">
         <p><i class="fa fa-envelope w3-xxlarge w3-text-light-grey"></i></p>
-        <p>huydt@email.com</p>
+        <p>huydt04@gmail.com</p>
       </div>
       <div class="w3-third w3-teal">
         <p><i class="fa fa-map-marker w3-xxlarge w3-text-light-grey"></i></p>
@@ -371,7 +371,6 @@ function loadContent(page) {
       `;
     }else if (page === 'page6'){
         content.innerHTML = `
-        <p>Tôi hiện đang là sinh viên K22 chương trình Cử nhân Tài năng ngành Khoa học máy tính thuộc khoa Khoa học và Kỹ thuật Máy tính của trường Đại học Bách Khoa - ĐHQG HCM</p>
         <div class="container">
         <p>GPA: <b>3.6/4.0</b></p>
         <ul class="list-group">
