--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
       width: 100%;
       height: 300px;
     }
+    .img-fluid2 {
+      margin-left: auto;
+      margin-right: auto;
+      width: 100%;
+      height: 300px;
+    }
     .centered-image {
     display: block;
     margin-left: auto;
@@ -122,6 +128,16 @@
 
     .prev:hover, .next:hover {
         background-color: rgba(0, 0, 0, 0.8);
+    }
+
+    #toeic {
+        width: 120%;
+        height: 120%;
+        margin-left: 370px;
+        padding-bottom: 50px;
+    }
+    .container3{
+       padding-left: 0px;
     }
 
     #footer {
@@ -223,6 +239,13 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#content" onclick="loadContent('page5')">Giới thiệu</a></li>
             <li><a class="dropdown-item" href="#content" onclick="loadContent('page6')">Thành tích</a></li>
+          </ul>
+          <button class="w3-button w3-white w3-hide-small w3-margin-right dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fa-solid fa-building-columns w3-margin-right"></i> Chứng chỉ, chứng nhận
+          </button>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#content" onclick="loadContent('page7')">Học thuật</a></li>
+            <li><a class="dropdown-item" href="#content" onclick="loadContent('page8')">Hoạt động khác</a></li>
           </ul>
         </div> 
       </div>
@@ -329,7 +352,7 @@ function loadContent(page) {
             <img src="image/qhh.jpg" class="img-fluid w3-round" alt="THPT Chuyên Quốc Học-Huế">
             </div>
             <div class="col-md-4">
-            <img src="image/qhh2.jpg" class="img-fluid w3-round" alt="THPT Chuyên Nguyễn Tất Thành">
+            <img src="image/qhh2.jpg" class="img-fluid w3-round" alt="THPT Chuyên Quốc Học-Huế">
             </div>
         </div>
         </div>
@@ -379,6 +402,39 @@ function loadContent(page) {
             <li class="list-group-item">Học bổng khuyến khích học tập học kỳ 222</li>
         </div>
       `;
+    }else if (page === 'page7'){
+        content.innerHTML = `
+        <div class="container">
+        <div class="row text-center">
+            <div class="col-md-4">
+            <img id="toeic" src="image/toeic.jpg" class="img-fluid w3-round" alt="TOEIC certificate">
+            </div>
+            <p>Chứng chỉ TOEIC </p>
+        </div>
+        </div>
+      `;
+    }
+    else if (page === 'page8'){
+        content.innerHTML = `
+        <div class="container3">
+    <div class="row text-center">
+        <div class="col-md-4">
+            <img id="nqdvolunteer" src="image/2211235_MinhChung9.jpg" class="img-fluid2 w3-round" alt="NQD Volunteer">
+            <p>Thành viên ban Chuyên môn NQD III</p>
+        </div>
+        <div class="col-md-4">
+            <img id="camtinhdang" src="image/2211235_MinhChung10.jpg" class="img-fluid2 w3-round" alt="Cam tinh Dang">
+            <p>Tham gia lớp Cảm tình Đảng</p>
+        </div>
+        <div class="col-md-4">
+            <img id="blood-donor" src="image/blood donor.jpg" class="img-fluid2 w3-round" alt="Blood donor">
+            <p>Tham gia hiến máu 3 lần</p>
+        </div>
+    </div>
+</div>
+
+      `;
+          
     }
   }
   let slideIndex = 0;
