--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
 </div>
 
 <!--Cubing Section-->
+<button class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="window.location.reload()"><i class="fa fa-house"></i></button>
 <header class="hidden" id="cubing">
   <div class="w3-container">
     <h1><b>Cubing</b></h1>
