--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   <div class="w3-panel w3-large">
     <a href="https://www.facebook.com/dratadius.manchel" target="_blank"><i class="fa-brands fa-facebook"></i></a>
     <a href="https://www.instagram.com/yuheng10092" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-    <a href="https://www.linkedin.com/in/nguy%E1%BB%85n-quang-huy-rcs-28a4172b8/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+    <a href="https://www.linkedin.com/in/huy-nguyen-quang-28a4172b8/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
     <a href="https://www.youtube.com/@nguyenquanghuy-rcs669" target="_blank"><i class="fa-brands fa-youtube"></i></a>
 
   </div>
