--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <div class="w3-container" style="margin-bottom:10px; margin-top: 10px;">
         <h4><b>About Me</b></h4>
-        <p>Tôi tên là Nguyễn Quang Huy. Tôi sinh ra và lớn lên ở tỉnh Kon Tum, quê quán ở tỉnh Nghệ An, học THPT ở tỉnh Thừa Thiên Huế và hiện đang sinh sống và học tập tại Thành phố Hồ Chí Minh. Tôi có đam mê với Toán học, lập trình, bóng đá, cờ vua và rubik. Hiện tại tôi đang theo học chương trình Cử nhân tài năng ngành Khoa học máy tính của Đại học Bách Khoa - ĐHQG HCM. Để biết thêm một số thông tin về bản thân tôi các bạn có thể hỏi Chatbot ở góc dưới bên phải.</p>
+        <p>Tôi tên là Nguyễn Quang Huy. Tôi sinh ra và lớn lên ở tỉnh Kon Tum, quê quán ở tỉnh Nghệ An, học THPT ở tỉnh Thừa Thiên Huế và hiện đang sinh sống và học tập tại Thành phố Hồ Chí Minh. Tôi có đam mê với Toán học, lập trình, bóng đá, cờ vua và rubik. Hiện tại tôi đang theo học chương trình Cử nhân tài năng ngành Khoa học máy tính của Đại học Bách Khoa - ĐHQG HCM. Để biết thêm một số thông tin về bản thân tôi, các bạn có thể hỏi Chatbot ở góc dưới bên phải.</p>
     </div>
 
     <div class="w3-container" style="margin-bottom:10px"><h4><b>Some photos </b></h4></div>
