--- a/index.html
+++ b/index.html
@@ -322,16 +322,15 @@
 <script src="script.js"></script>
 <script>
   window.embeddedChatbotConfig = {
-  chatbotId: "MI0dbvTI70Ww9LdjVXDsk",
+  chatbotId: "nbYWzFWFBatZacZ3c-6EQ",
   domain: "www.chatbase.co"
   }
   </script>
   <script
   src="https://www.chatbase.co/embed.min.js"
-  chatbotId="MI0dbvTI70Ww9LdjVXDsk"
+  chatbotId="nbYWzFWFBatZacZ3c-6EQ"
   domain="www.chatbase.co"
   defer>
   </script>
-
 </body>
 </html>
