--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <div class="w3-container" style="margin-bottom:10px"><h4><b>Some photos </b></h4></div>
     <div class="slideshow-container">
         <div class="mySlides fade">
-            <img src="image/selfi.jpg" class="centered-image">
+            <img src="image/hsgqg.jpg" class="centered-image">
         </div>
     
         <div class="mySlides fade">
@@ -319,20 +319,19 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="script.js"></script>
-<script>
+<!-- <script>
   window.embeddedChatbotConfig = {
-  chatbotId: "nbYWzFWFBatZacZ3c-6EQ",
+  chatbotId: "MI0dbvTI70Ww9LdjVXDsk",
   domain: "www.chatbase.co"
   }
   </script>
   <script
   src="https://www.chatbase.co/embed.min.js"
-  chatbotId="nbYWzFWFBatZacZ3c-6EQ"
+  chatbotId="MI0dbvTI70Ww9LdjVXDsk"
   domain="www.chatbase.co"
   defer>
-  </script>
-  <script type="text/javascript">
+  </script> -->
+  <!-- <script type="text/javascript">
     (function(d, t) {
         var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
         v.onload = function() {
@@ -344,6 +343,18 @@
         }
         v.src = "https://cdn.voiceflow.com/widget/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
     })(document, 'script');
-  </script>
+  </script> -->
+  <script>
+    window.embeddedChatbotConfig = {
+    chatbotId: "L7Mfgmmr5qnqjxdaQvvl-",
+    domain: "www.chatbase.co"
+    }
+    </script>
+    <script
+    src="https://www.chatbase.co/embed.min.js"
+    chatbotId="L7Mfgmmr5qnqjxdaQvvl-"
+    domain="www.chatbase.co"
+    defer>
+    </script>
 </body>
 </html>
