--- a/index.html
+++ b/index.html
@@ -319,6 +319,20 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="script.js"></script>
+<script>
+  window.embeddedChatbotConfig = {
+  chatbotId: "L7Mfgmmr5qnqjxdaQvvl-",
+  domain: "www.chatbase.co"
+  }
+  </script>
+  <script
+  src="https://www.chatbase.co/embed.min.js"
+  chatbotId="L7Mfgmmr5qnqjxdaQvvl-"
+  domain="www.chatbase.co"
+  defer>
+  </script>
+
 <!-- <script>
   window.embeddedChatbotConfig = {
   chatbotId: "MI0dbvTI70Ww9LdjVXDsk",
@@ -331,30 +345,5 @@
   domain="www.chatbase.co"
   defer>
   </script> -->
-  <!-- <script type="text/javascript">
-    (function(d, t) {
-        var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
-        v.onload = function() {
-          window.voiceflow.chat.load({
-            verify: { projectID: '66ddd8e5cb41b03940d42adb' },
-            url: 'https://general-runtime.voiceflow.com',
-            versionID: 'production'
-          });
-        }
-        v.src = "https://cdn.voiceflow.com/widget/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
-    })(document, 'script');
-  </script> -->
-  <script>
-    window.embeddedChatbotConfig = {
-    chatbotId: "L7Mfgmmr5qnqjxdaQvvl-",
-    domain: "www.chatbase.co"
-    }
-    </script>
-    <script
-    src="https://www.chatbase.co/embed.min.js"
-    chatbotId="L7Mfgmmr5qnqjxdaQvvl-"
-    domain="www.chatbase.co"
-    defer>
-    </script>
 </body>
 </html>
